<resources>
    <string name="app_name">OCD</string>
    <string name="countdown_format">Resend OTP in %ds seconds</string>
    <string name="continue_p">Continue</string>
    <string name="loading">Loading…</string>
    <string name="msg_validateOTP">A 4-digit verification code is sent to %s. Please enter it here.</string>
    <string name="gender_and_dob">%s \u2022 %s</string>
    <string name="msg_good_morning">Good morning, %s!</string>
    <string name="other">other</string>
    <string name="lbl_nil">NIL</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="msg_beginner_friend3">Beginner-friendly Week</string>
    <string name="lbl_rocd_i">ROCD I</string>
    <string name="msg_beginner_friend2">
Beginner Friendly Week</string>
    <string name="lbl_education">Education</string>
    <string name="lbl_occupation">Occupation</string>
    <string name="msg_we_will_help_yo">We will help you maintain your calm by keeping the OCD apar and overcoming it. </string>
    <string name="msg_let_s_hear_what">Let\u2019s hear what do users have to say!</string>
    <string name="msg_good_morning_h">Good morning, Hardikya!</string>
    <string name="lbl_62">62</string>
    <string name="msg_doubts_uncerta">Doubts, uncertainty and acceptance</string>
    <string name="lbl_obsession2">Obsession:</string>
    <string name="lbl_resources">Resources</string>
    <string name="msg_sending_you_lov">Sending you love from our side!</string>
    <string name="msg_to_keep_making"> to keep making progress!</string>
    <string name="msg_post_reflection">Post-reflection form</string>
    <string name="lbl_01_01_20022">01/01/2002</string>
    <string name="msg_hardikya01gupta">hardikya01gupta@gmail.com</string>
    <string name="lbl_jan_16_2024">Jan 16, 2024</string>
    <string name="lbl_5_min">5 min</string>
    <string name="msg_enter_the_name">Enter the name here.</string>
    <string name="lbl_daily_reminders">Daily reminders</string>
    <string name="lbl_log_out">Log out</string>
    <string name="msg_we_will_see_you">We will see you back in two hours, until then relax yourself and have a break.</string>
    <string name="msg_previous_passwo">Previous Password</string>
    <string name="msg_let_s_begin_my">Let\u2019s begin my therapy</string>
    <string name="msg_agree_and_proce">Agree and proceed.</string>
    <string name="msg_health_anxiety">Health Anxiety I</string>
    <string name="lbl_23_jan">23
Jan</string>
    <string name="msg_bringing_togeth">Bringing together expertise from IIITD and AIIMS, our multidisciplinary team is committed to creating an innovative and user-centric application that integrates the latest advancements in mental health research. By combining the technical prowess of IIITD with the medical insights of AIIMS, we aim to provide a comprehensive, evidence-based solution that fosters effective OCD management.</string>
    <string name="msg_trigger_exposur">Trigger Exposure</string>
    <string name="msg_this_document_a2">"This document and the other documents that we reference below make up our house rules,or what we officially call our Terms of Use (the "Terms" for short).
The Terms are a legally binding contract between you and our app. If you live in India, the contract is between you and our app.
If you live elsewhere, the contract is between you and XYZ Ireland UC, a subsidiary of XYZ.

We'll just refer to XYZ and all of its subsidiaries collectively as "XYZ." Please note that "</string>
    <string name="msg_sign_in_with_go">Sign in with Google</string>
    <string name="msg_number_of_times">Number of times compulsion performed:</string>
    <string name="lbl_m_01_01_2002">M \u2022 01.01.2002</string>
    <string name="lbl_checking">Checking</string>
    <string name="msg_the_app_has_bee">"The app has been a beacon of support. The 'Task Guidance Video' is a fantastic touch for those moments of uncertainty. The 'Post-Task Reflection' form also encourages self-awareness and growth!&#128200;"</string>
    <string name="lbl_dob_dd_yy_mm">DOB (DD/YY/MM)</string>
    <string name="lbl_30_seconds">30 seconds</string>
    <string name="msg_we_will_see_you2">We will see you back in </string>
    <string name="lbl_anxiety_i">Anxiety I</string>
    <string name="lbl_22_01_2024">22/01/2024</string>
    <string name="msg_unwanted_sexual">Unwanted Sexual Thoughts</string>
    <string name="lbl_enter_now">enter now!</string>
    <string name="lbl_edit_profile2">Edit Profile</string>
    <string name="lbl_42">4:</string>
    <string name="lbl_anxiety">Anxiety</string>
    <string name="msg_pending_tasks">Pending Tasks (1)</string>
    <string name="msg_0_of_16_complet">0 of 16 complete</string>
    <string name="msg_more_than_15_mi">More than 15 minutes</string>
    <string name="lbl_15_seconds">15 seconds</string>
    <string name="msg_watch_next_vide">Watch next video▶️</string>
    <string name="lbl_11_am_5_pm">11 am - 5 pm</string>
    <string name="lbl_preferences2">Preferences</string>
    <string name="lbl_ongoing_1">Ongoing (1)</string>
    <string name="lbl_15_20_minutes">15-20 minutes</string>
    <string name="msg_fear_conquer">Fear &amp; Conquer Task 1</string>
    <string name="msg_ready_to_fight">Ready to fight OCD?</string>
    <string name="msg_journal_your_oc">Journal your OCD through a few-clicks and help yourself to conquer the mountain of OCD.</string>
    <string name="msg_sign_in_with_fa">Sign in with Facebook</string>
    <string name="lbl_30">30</string>
    <string name="lbl_31">31</string>
    <string name="lbl_app_shortcuts2">App Shortcuts</string>
    <string name="lbl_0_complete">0% complete</string>
    <string name="msg_we_can_help_wit">We can help with:</string>
    <string name="lbl_arjun_gupta">Arjun Gupta
</string>
    <string name="lbl_stress_2_62">Stress 2: 62</string>
    <string name="lbl_day_streak">Day-streak</string>
    <string name="lbl10">தமிழ்</string>
    <string name="lbl_6_min">6 min</string>
    <string name="lbl11">ગુજરાતી</string>
    <string name="lbl_15_jan">15
Jan</string>
    <string name="lbl12">اُردُو</string>
    <string name="msg_hand_washing_c">hand washing, cleaning, and avoiding anything perceived to cause contamination.</string>
    <string name="lbl_20">20</string>
    <string name="lbl_bio">Bio</string>
    <string name="msg_can_i_customize">Can I customize the duration of the exposure tasks?</string>
    <string name="lbl_55_mins">55 mins</string>
    <string name="lbl_23">23</string>
    <string name="lbl_view_start">View &amp; Start&#128640;</string>
    <string name="lbl_24">24</string>
    <string name="lbl_21">21</string>
    <string name="lbl_22">2</string>
    <string name="msg_allow_push_noti">Allow push notifications</string>
    <string name="lbl_27">27</string>
    <string name="lbl_28">28</string>
    <string name="msg_let_s_move_ahea">Let\u2019s move ahead!</string>
    <string name="lbl_stress_level">Stress Level</string>
    <string name="lbl_25">25</string>
    <string name="lbl_26">26</string>
    <string name="lbl_29">29</string>
    <string name="msg_just_like_a_per">"Just like a perfect cup of coffee, you've brewed patience, strength, and resilience.&#127775;&#129395;"</string>
    <string name="lbl_stress_1_85">Stress 1: 85</string>
    <string name="lbl_female">Female</string>
    <string name="msg_enable_clock_so">Enable clock sound</string>
    <string name="lbl_stress_meter">Stress meter:</string>
    <string name="lbl_advait_kumar">Advait Kumar
</string>
    <string name="lbl_e_mail">E-Mail</string>
    <string name="msg_coping_with_anx">Coping with anxiety</string>
    <string name="msg_religious_obses">Religious Obsessions</string>
    <string name="msg_embark_on_a_com">Embark on a comprehensive journey to comprehend and effectively manage Pure Obsessive-Compulsive Disorder (Pure OCD) through Exposure and Response Prevention (ERP) therapy. In this series, we delve into the intricacies of Pure OCD, offering practical insights and step-by-step guidance on how to implement ERP techniques for optimal therapeutic results.</string>
    <string name="msg_with_over_15_ye">With over 15 years of invaluable experience in Clinical Psychology, Dr. Swati is a licensed Clinical Psychologist registered with the Rehabilitation Council of India (RCI). She has honed her expertise at prestigious institutions, including the National Institute of Mental Health and Neurosciences (NIMHANS, Bengaluru), AIIMS, Delhi, Janakpuri Superspeciality Hospital, RML Hospital, and G B Pant Hospital.</string>
    <string name="lbl_0_5_times">0-5 times</string>
    <string name="lbl_12">12</string>
    <string name="lbl_13">13</string>
    <string name="lbl_10">10</string>
    <string name="lbl_09_mins">09 mins</string>
    <string name="lbl_11">11</string>
    <string name="lbl_16">16</string>
    <string name="lbl_let_s_start">Let\u2019s start⚡</string>
    <string name="lbl_6_10_minutes">6-10 minutes</string>
    <string name="lbl_17">17</string>
    <string name="lbl_14">14</string>
    <string name="lbl_start_task">Start task&#128640;</string>
    <string name="lbl_15">15</string>
    <string name="lbl_proceed">PROCEED</string>
    <string name="lbl_18">18</string>
    <string name="msg_allow_task_remi">Allow task reminders</string>
    <string name="lbl_19">19</string>
    <string name="msg_sign_up_with_go">Sign up with Google</string>
    <string name="lbl_keep">Keep </string>
    <string name="msg_thought_reversa2">Thought Reversal exercise</string>
    <string name="msg_type_your_trigg">Type your trigger here.</string>
    <string name="msg_fear_conquest2">Fear &amp; Conquest Task 2</string>
    <string name="msg_15th_january_2">15th January, 2024</string>
    <string name="lbl_24_jan">24
Jan</string>
    <string name="lbl_compulsion">Compulsion</string>
    <string name="msg_spend_more_time">Spend more time in understanding OCD and conquering it with ERP therapy at your own pace. </string>
    <string name="msg_compulsion_to_s2">Compulsion to straighten tie</string>
    <string name="lbl_rocd_iii">ROCD III</string>
    <string name="msg_resume_the_cour">Resume the course right from where you left off!</string>
    <string name="msg_erp_therapy_is">ERP therapy is a specialized cognitive-behavioral approach designed to address and manage Obsessive-Compulsive Disorder (OCD). It involves systematically exposing individuals to anxiety triggers while simultaneously preventing the accompanying compulsive responses.

ERP operates on the principle of breaking the cycle of obsessions and compulsions. By gradually exposing individuals to their anxiety triggers in a controlled manner and preventing the usual compulsive behaviors, it helps desensitize them to the distressing thoughts, fostering adaptive responses.</string>
    <string name="lbl_02">0%</string>
    <string name="lbl_users">users</string>
    <string name="lbl_00">00</string>
    <string name="msg_re_enter_passwo">Re-enter Password</string>
    <string name="msg_proceed_with_your">Proceed with your</string>
    <string name="msg_forgot_password">Forgot password?</string>
    <string name="msg_proceed_to_regi">Proceed to register on the app</string>
    <string name="msg_new_user_to_the">New user to the application?</string>
    <string name="msg_register_now">Register now!</string>
    <string name="lbl_login">Login</string>
    <string name="gender">Gender</string>
    <string name="msg_already_an_exis">Already an existing user?</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_enter_email">Enter Email</string>
    <string name="lbl_enter_name">Enter Name</string>
    <string name="lbl_enter_password">Enter Password</string>
    <string name="lbl_registration">Registration</string>
</resources>