<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/groupStylewhite_A700">

        <LinearLayout
            android:gravity="start"
            android:id="@+id/linearLogin"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtProceedwithyo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_54pxv"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/msg_proceed_with_your"
                style="@style/txtNunitoSansregular11_1"
                tools:text="@string/msg_proceed_with_your"
                />

            <TextView
                android:id="@+id/txtLogin"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_login"
                style="@style/txtNunitoSansbold24"
                tools:text="@string/lbl_login"/>

            <EditText
                android:id="@+id/email"
                android:ellipsize="end"
                android:gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingStart="@dimen/_5pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:hint="@string/lbl_e_mail"
                android:inputType="textEmailAddress"
                style="@style/txtSolidRounded"
                tools:text="@string/lbl_enter_email"/>



            <LinearLayout android:id="@+id/password"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylegray_3">

                <EditText android:ellipsize="end"
                    android:id="@+id/txtEnterPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginBottom="@dimen/_11pxv"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_weight="0.85"
                    android:singleLine="true"
                    android:hint="@string/lbl_enter_password"
                    style="@style/txtSolidRounded"
                    tools:text="@string/lbl_enter_password"
                    />


                <FrameLayout android:id="@+id/btnShowPassword"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:onClick = "showHidePassword">
                    <ImageView
                        android:id="@+id/imgEye"
                        android:layout_gravity="top|start"
                        android:layout_height="@dimen/_14pxv"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_eye"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_eye"
                        />
                    </FrameLayout>

            </LinearLayout>

            <Button
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnLogin"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_10pxv" android:singleLine="true"
                android:text="@string/lbl_login"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_3" tools:text="@string/lbl_login"
                android:onClick = "onClickLogin"
                />

            <TextView
                android:id="@+id/txtForgotpassword"
                style="@style/password_Style"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/msg_forgot_password"
                tools:text="@string/msg_forgot_password" />

            <View android:background="@color/gray_200"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="@dimen/_320pxh"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical">

                <TextView
                    android:ellipsize="end"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/msg_new_user_to_the"
                    style="@style/txtDMSansregular11"
                    tools:text="@string/msg_new_user_to_the"
                    android:onClick="newUser"
                    android:layout_marginBottom="15dp"
                    />

                <TextView
                    android:ellipsize="end"
                    android:id="@+id/btnNewUser"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/msg_register_now"
                    style="@style/txtDMSansregularindigo_200_87"
                    tools:text="@string/msg_register_now"
                    android:onClick="newUser"
                    android:layout_marginBottom="15dp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
